# automatic-data-exploration-tool

./: .gitignore  README.md  main.py  pyproject.toml
src/: app.py
src/processors/: categorical.py  missing.py  numerical.py  text.py
src/services/: inspector.py  reader.py
src/utils/: converter.py
